datasets/dataset_txt/requests/requests_981.txt
huseyinyilmaz commented on Aug 9, 2016
First of all thanks for the awesome library. I am really enjoying using requests. This is my favorite library.
In the last version of requests, I started to get an error on my own library and it turned out it was because of my requests dependency.
In python3.2, requests v2.11 gives following error:
  File "/home/travis/build/huseyinyilmaz/placebo/requests/__init__.py", line 64, in <module>
    from .models import Request, Response, PreparedRequest
  File "/home/travis/build/huseyinyilmaz/placebo/requests/models.py", line 856
    http_error_msg = u'%s Client Error: %s for url: %s' % (self.status_code, reason, self.url)
                                                      ^
SyntaxError: invalid syntax
Here is the fix
#3478
Again sorry about the crappy way of testing. I could not install python3.2 on my local machine so I could not test it with requests tests.